# Moonshot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  architecture.md  docker-compose.yml  moonshot.db  pyproject.toml
.github/workflows/: api-ci.yml
apps/api/: .env.example  alembic.ini
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/fixtures/: api_examples.json  jda_seed_scenarios.json  memory_benchmark.json  scoring_benchmark.json
apps/api/scripts/: build_governance_bundle.py  check_api_examples.py  check_contract_governance.py  check_demo_fixture_contract.py  check_export_schema.py  check_frontend_contract_sync.py  check_memory_eval.py  check_openapi_sync.py  check_report_summary_consistency.py  check_score_drift.py  check_timeline_source_contract.py  dev_stack.sh  dump_openapi.py  guard_postgres_migration_target.py  load_pilot.py  seed_demo.py  staging_smoke.py  start_api.sh  start_worker.sh  validate_runtime_env.py
apps/api/tests/: conftest.py  test_admin_policies.py  test_api_examples_script.py  test_auth_jwt.py  (+62 more)
apps/app/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
docs/00_mvp/: mvp_scope.md
docs/01_arch/: adr_0001_backend_stack.md  adr_0002_agent_topology.md  adr_0003_authz_model.md  adr_0004_data_policy.md  adr_0005_contract_versioning.md  adr_0006_scoring_immutability.md  adr_0007_content_learning_loop.md
docs/02_domain/: domain_model.md
docs/03_api/: change_policy.md  changelog.md  openapi.yaml
docs/04_events/: event_schema.md
docs/05_scoring/: scoring_spec.md
docs/06_security/: privacy_and_controls.md
docs/07_ops/: runbook.md
docs/08_frontend_contract/: frontend_backend_contract.md  jda_integration_playbook.md
docs/09_candidate_enablement/: doordash_4week_candidate_enablement.md  doordash_4week_operator_runbook.md
output/lighthouse/: dashboard.json  demo.json
output/playwright/: demo-browser-summary.json  demo-layout-summary.json  pw-smoke.spec.js  ui-audit-results.json
(+237 files in other folders)
