[project]
name = "moonshot"
version = "0.1.0"
description = "Moonshot backend-first MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]>=3.3.3",
  "pyjwt>=2.11.0",
  "pyyaml>=6.0.3",
  "google-genai>=1.65.0",
  "litellm",
  "pandas>=3.0.1",
  "numpy>=2.4.2",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx"
]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "apps/api"}

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["app*"]
